# ROS_MULTI

./: README.md  command_multi
Interface/: main.py  main.spec  main0.py  main1.py  pra0911.py  pra0911.ui  pra09110.py
clbrobot/: CMakeLists.txt  package.xml
clbrobot/env/: install.sh
clbrobot/include/: riki_base.h
clbrobot/launch/: appcamera.launch  auto_slam.launch  bringup.launch  camera.launch  hector_slam.launch  karto_slam.launch  lidar_slam.launch  move_base.launch  multi_bringup.launch  multi_goals.launch  navigate.launch  navigate_multi.launch  robot.launch
clbrobot/launch/depth_camera/astra/: astra_laser.launch  astra_laser_pro.launch  astra_navigate.launch  astra_xtion_gmapping.launch
clbrobot/launch/depth_camera/precipio/: precipio_xtion_gmapping.launch
clbrobot/launch/lidar/: flashlidar.launch  fslidar.launch  g4lidar.launch  hlds.launch  multi_rplidar.launch
clbrobot/maps/: house.pgm
clbrobot/param/ekf/: multirobot_localization.yaml
clbrobot/param/imu/: imu_calib.yaml
clbrobot/param/navigation/: move_base.xml
clbrobot/rviz/: auto_slam.rviz  navigate.rviz  odometry.rviz  slam.rviz
clbrobot/src/: riki_base.cpp  riki_base_node.cpp
control/: CMakeLists.txt  package.xml
control/scripts/: control1 (复件).py  control1.py  control2 nodes.py  control2.py  control3 (复件).py  control3 ok.py  control3.py  control4 (复件).py  control4.py  control5.py  goRound.py  goal_reached_and_location_listener.py  listener.py  talker.py  talker1.py  talker3.py  video_listener.py
imu_calib/src/: apply_calib.cpp
multi_robot/: command_multi
(+39 files in other folders)
